vlib/v/checker/tests/assign_expr_undefined_err_i.out
vlib/v/checker/tests/assign_expr_undefined_err_i.vv:2:23: error: undefined variable: `a`
    1 | fn main() {
    2 |     mut a := []int{init: a}
      |                          ^
    3 |     println(a)
    4 | }
