vlib/v/checker/tests/assign_expr_undefined_err_i.vv
fn main() {
	mut a := []int{init: a}
	println(a)
}
